Guilles changes examples/mini_eqns when adapting to v0.7.0

--- a/examples/mini_eqns/baseline.demo.yaml
+++ b/examples/mini_eqns/baseline.demo.yaml
@@ -3,6 +3,7 @@
 - query: ProveEqualityAtOnce
   args:
     equality: ["cos(pi/3)", "sin(pi/6)"]
+    prefix: []
   answers:
     - answer: |
         The equality can be derived as follows:
@@ -53,6 +54,7 @@
 - query: ProveEqualityAtOnce
   args:
     equality: ["2*sin(x/2)*cos(x/2)", "sin(x)"]
+    prefix: []
   answers:
     - answer: |
         It is easier to start with the right-hand side here:
