Track automatically generated files & update gitignore. Before rebasing.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ site
 delphyne.egg-info
 .DS_Store
 __pycache__
+
+
+# Guillermos ignores:
+**/package-lock.json
+node_modules/
+examples/libraries/why3py/src/why3py/core.py
