--- a/examples/mini_eqns/delphyne.yaml
+++ b/examples/mini_eqns/delphyne.yaml
@@ -1,4 +1,4 @@
 strategy_dirs: ["."]
 prompt_dirs: ["./prompts"]
-modules: ["baseline_strategy"]
+modules: ["baseline_strategy_old"]
 demo_files: ["baseline"]
