--- a/examples/mini_eqns/.gitignore
+++ b/examples/mini_eqns/.gitignore
@@ -2,4 +2,13 @@
 __pycache__
 
 # Guille's ignore
-extras/
+# Ignore old experimental files
+examples/mini_eqns/yaml_cleaner2..py
+examples/mini_eqns/yaml_cleaner.py
+examples/mini_eqns/tester.py
+examples/mini_eqns/run_base.ipynb
+examples/mini_eqns/baseline_strategy_old.py
+examples/mini_eqns/aux.py
+examples/mini_eqns/02_experiments.py
+examples/mini_eqns/_01_datapre.py
+examples/mini_eqns/experiments_baseline/
