--- a/examples/find_invariants/experiments/test-output/test_abduction_experiment/experiment.yaml
+++ b/examples/find_invariants/experiments/test-output/test_abduction_experiment/experiment.yaml
@@ -1,7 +1,7 @@
 name: test_abduction_experiment
 description: null
 configs:
-  ec300a72-6eed-4fcc-991a-7c324e5983dc:
+  75b5afb1-9e91-4315-85eb-47b83afad1b4:
     params:
       bench_name: '1'
       model_cycle:
@@ -13,11 +13,13 @@ configs:
       num_completions: 4
       max_requests_per_attempt: 4
       max_dollar_budget: 0.1
+      max_retries_per_step: 6
+      max_propagation_steps: 2
       seed: 0
     status: done
-    start_time: 2025-09-07 15:05:34.659141
-    end_time: 2025-09-07 15:05:50.673504
-  80df9a9d-24f4-457e-8e09-5164ff82eddb:
+    start_time: 2025-09-08 20:36:49.834096
+    end_time: 2025-09-08 20:36:58.549381
+  5e2b1e5c-10ee-4f25-8c8b-edf1960fe625:
     params:
       bench_name: '7'
       model_cycle:
@@ -29,7 +31,9 @@ configs:
       num_completions: 4
       max_requests_per_attempt: 4
       max_dollar_budget: 0.1
+      max_retries_per_step: 6
+      max_propagation_steps: 2
       seed: 0
     status: done
-    start_time: 2025-09-07 15:05:34.659110
-    end_time: 2025-09-07 15:06:01.768060
+    start_time: 2025-09-08 20:36:49.834047
+    end_time: 2025-09-08 20:37:07.022496
