--- a/tests/output/test_cached_computation_experiment/experiment.yaml
+++ b/tests/output/test_cached_computation_experiment/experiment.yaml
@@ -1,6 +1,8 @@
 name: test_cached_computation_experiment
 description: null
 configs:
-  cfd486f3-9905-416e-abe4-78bb1892091a:
+  a96a8a26-8f5a-4ae9-ba59-00f8cbe9e9b9:
     params: {}
     status: done
+    start_time: 2025-09-17 10:26:04.510300
+    end_time: 2025-09-17 10:26:04.957418
