Add tests for the `using` field of demonstrations

--- a/tests/example_strategies.demo.yaml
+++ b/tests/example_strategies.demo.yaml
@@ -579,3 +579,18 @@
   expect:
     test_feedback:
       - diagnostics: __empty__
+
+
+- demonstration: make_sum_fetched_answers
+  strategy: make_sum
+  args:
+    allowed: [1, 2, 3, 4, 5]
+    goal: 5
+  tests:
+    - run | success
+  using:
+    - command: "output/make_sum_trace.yaml"
+  queries: []
+  expect:
+    test_feedback:
+      - diagnostics: __empty__
