Add option to remove timing info from logs

--- a/tests/commands/run_make_sum_using_demo.exec.yaml
+++ b/tests/commands/run_make_sum_using_demo.exec.yaml
@@ -1,7 +1,5 @@
 # Run the `make_sum` strategy, for testing purposes. 
 
-# delphyne-command
-
 command: run_strategy
 args:
   strategy: make_sum
@@ -17,6 +15,7 @@ args:
     num_requests: 0  # all answers are taken from the demo
   export_browsable_trace: false
   export_raw_trace: false
+  remove_timing_info: true
 outcome:
   diagnostics: []
   result:
@@ -28,7 +27,6 @@ outcome:
     log:
       - message: llm_override
         level: info
-        time: 2025-09-18 10:55:20.553269
         metadata:
           source: example_strategies.demo.yaml:make_sum_demo:0:0
           query_name: MakeSum
